--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URI=postgres://postgres:password@localhost:5432/user_login_system
+DB_URI=postgres://postgres:20210258@localhost:5432/user_login_system
 PORT=3141
